manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-activity
  namespace: github-activity
  labels:
    app: github-activity
spec:
  replicas: 3
  selector:
    matchLabels:
      app: github-activity
  template:
    metadata:
      labels:
        app: github-activity
    spec:
      containers:
        - name: github-activity
          image: "trueberryless/github-activity:0.1.0"
          imagePullPolicy: Always
