manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-activity
  namespace: github-activity
  annotations:
    cert-manager.io/issuer: acme-issuer
spec:
  selector:
    app: github-activity
  ports:
    - name: http
      port: 80
