manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-activity
  namespace: github-activity
spec:
  rules:
    - host: github-activity.trueberryless.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: github-activity
                port:
                  number: 80

  tls:
    - hosts:
        - github-activity.trueberryless.org
      secretName: github-activity
